--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,8 @@
 	url = https://github.com/sjl/gundo.vim.git
 	branch = master
 	ignore = all
+[submodule "bundle/gruvbox"]
+	path = bundle/gruvbox
+	url = https://github.com/morhetz/gruvbox.git
+	branch = master
+	ignore = all
