--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,21 @@
-[submodule "bundle/YouCompleteMe"]
-	path = bundle/YouCompleteMe
-	url = https://github.com/Valloric/YouCompleteMe.git
+[submodule "pathogen"]
+	path = pathogen
+	url = https://github.com/tpope/vim-pathogen.git
 	branch = master
-	ignore = all
+    ignore = all
 [submodule "bundle/ack.vim"]
 	path = bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
 	branch = master
-	ignore = all
+    ignore = all
 [submodule "bundle/command-t"]
 	path = bundle/command-t
 	url = https://github.com/wincent/command-t.git
+	branch = master
+    ignore = all
+[submodule "bundle/gruvbox"]
+	path = bundle/gruvbox
+	url = https://github.com/morhetz/gruvbox.git
 	branch = master
 	ignore = all
 [submodule "bundle/gundo.vim"]
@@ -18,8 +23,8 @@
 	url = https://github.com/sjl/gundo.vim.git
 	branch = master
 	ignore = all
-[submodule "bundle/gruvbox"]
-	path = bundle/gruvbox
-	url = https://github.com/morhetz/gruvbox.git
+[submodule "bundle/YouCompleteMe"]
+	path = bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
 	branch = master
 	ignore = all
