--- a/.ideavimrc
+++ b/.ideavimrc
@@ -10,6 +10,8 @@ set hlsearch
 set ignorecase
 set smartcase
 
+set number relativenumber
+
 nnoremap <leader><space> :nohlsearch<CR>
 nnoremap <leader>f :action ShowIntentionActions<cr>
 nnoremap <leader>c :action Refactorings.QuickListPopupAction<cr>
@@ -24,3 +26,4 @@ nnoremap <leader>b :action Back<cr>
 
 set ideajoin
 set ideamarks
+set idearefactormode=keep
