--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 	url = https://github.com/Valloric/YouCompleteMe.git
 	branch = master
 	ignore = all
+[submodule "bundle/nerdcommenter"]
+	path = bundle/nerdcommenter
+	url = https://github.com/preservim/nerdcommenter
