--- a/.gitmodules
+++ b/.gitmodules
@@ -8,9 +8,9 @@
 	url = https://github.com/mileszs/ack.vim.git
 	branch = master
 	ignore = all
-[submodule "bundle/command-t"]
-	path = bundle/command-t
-	url = https://github.com/wincent/command-t.git
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
 	branch = master
 	ignore = all
 [submodule "bundle/gruvbox"]
